--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,6 +12,8 @@ commands:
     description: Main command.
   skins:
     description: Opens skins GUI
+  skinver:
+    description: Shows the plugin version.
 permissions:
    skinsrestorer.playercmds:
      description: Allows access to all main commands.
