Do the fix requested in #49

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: SkinsRestorer
 main: skinsrestorer.bukkit.SkinsRestorer
 version: ${project.version}
-description: Ability to restore/change skins on servers! (Offline and Online Mode). (Bungee/Bukkit/Sponge)
+description: Ability to restore/change skins on servers! (Offline and Online Mode)
 authors: [Th3Tr0LLeR]
 softdepend: [Multiverse-Core]
 commands:
