set final jar name to be non-changable with versions

--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
     	</dependency>
     </dependencies>
     <build>
+        <finalName>SkinsRestorer</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
