--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,11 @@
 
     <groupId>com</groupId>
     <artifactId>skinsrestorer</artifactId>
-    <version>13.2</version>
+    <version>13.3</version>
     <packaging>jar</packaging>
+
+    <name>SkinsRestorer</name>
+    <description>Ability to restore/change skins on servers! (Offline and Online Mode)</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -52,6 +55,7 @@
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.12.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <!-- Multiverse-Core -->
         <dependency>
@@ -64,36 +68,42 @@
                     <artifactId>bukkit</artifactId>
                 </exclusion>
             </exclusions>
+            <scope>provided</scope>
         </dependency>
         <!-- BungeeCord API -->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.12-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <!-- BungeeCord-Proxy module -->
         <dependency>
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-proxy</artifactId>
             <version>1.12-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <!-- Mojang Auth Library (needed for SkinsGUI) -->
         <dependency>
             <groupId>com.mojang</groupId>
             <artifactId>authlib</artifactId>
             <version>1.5.21</version>
+            <scope>provided</scope>
         </dependency>
         <!-- bStats Lite for Bukkit -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit-lite</artifactId>
             <version>1.2</version>
+            <scope>compile</scope>
         </dependency>
         <!-- bStats Lite for BungeeCord -->
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord-lite</artifactId>
             <version>1.2</version>
+            <scope>compile</scope>
         </dependency>
         <!-- Spiget Updater for Bukkit -->
         <dependency>
@@ -106,24 +116,14 @@
                     <artifactId>bukkit</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <!-- Spiget Updater for BungeeCord -->
-        <dependency>
-            <groupId>org.inventivetalent.spiget-update</groupId>
-            <artifactId>bungee</artifactId>
-            <version>1.4.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>net.md-5</groupId>
-                    <artifactId>bungeecord-api</artifactId>
-                </exclusion>
-            </exclusions>
+            <scope>compile</scope>
         </dependency>
         <!-- Spigot 1.7.10 API -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>1.7.10-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
@@ -132,15 +132,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.1.0</version>
                 <configuration>
                     <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <artifactSet>
-                        <includes>
-                            <include>org.bstats:*</include>
-                            <include>org.inventivetalent.*</include>
-                        </includes>
-                    </artifactSet>
                     <relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
