Start work on deprecating BungeeCord-Proxy and YamlConfig Very broken, doesn't compile!

--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
-name: SkinsRestorer
+name: ${project.name}
 main: skinsrestorer.bungee.SkinsRestorer
 version: ${project.version}
 author: Th3Tr0LLeR
