--- a/pom.xml
+++ b/pom.xml
@@ -20,31 +20,29 @@
         </repository>
         <repository>
             <id>multiverse-repo</id>
-            <url>http://repo.onarandombox.com/content/groups/public</url>
+            <url>https://repo.onarandombox.com/content/groups/public</url>
         </repository>
         <repository>
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
+        <!-- Let's hope that I can find a replacement to Bungeecord-Proxy classes
         <repository>
             <id>luck-repo</id>
             <url>https://ci.lucko.me/plugin/repository/everything</url>
         </repository>
+        -->
         <repository>
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net</url>
         </repository>
         <repository>
             <id>bstats-repo</id>
-            <url>http://repo.bstats.org/content/repositories/releases/</url>
+            <url>https://repo.bstats.org/content/repositories/releases/</url>
         </repository>
         <repository>
             <id>inventive-repo</id>
             <url>https://repo.inventivetalent.org/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>mikeprimm-repo</id>
-            <url>http://repo.mikeprimm.com</url>
         </repository>
     </repositories>
     <dependencies>
@@ -95,13 +93,6 @@
                 </exclusion>
             </exclusions>
             <scope>compile</scope>
-        </dependency>
-        <!-- Spigot 1.7.10 API -->
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.7.10-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
