--- a/pom.xml
+++ b/pom.xml
@@ -19,19 +19,13 @@
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
         <repository>
-            <id>multiverse-repo</id>
-            <url>https://repo.onarandombox.com/content/groups/public</url>
-        </repository>
-        <repository>
             <id>bungeecord-repo</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
-        <!-- Let's hope that I can find a replacement to Bungeecord-Proxy classes
         <repository>
-            <id>luck-repo</id>
-            <url>https://ci.lucko.me/plugin/repository/everything</url>
+            <id>sponge</id>
+            <url>https://repo.spongepowered.org/maven</url>
         </repository>
-        -->
         <repository>
             <id>minecraft-repo</id>
             <url>https://libraries.minecraft.net</url>
@@ -58,6 +52,13 @@
             <groupId>net.md-5</groupId>
             <artifactId>bungeecord-api</artifactId>
             <version>1.12-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Sponge API -->
+        <dependency>
+            <groupId>org.spongepowered</groupId>
+            <artifactId>spongeapi</artifactId>
+            <version>7.0.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- Mojang Auth Library (needed for SkinsGUI) -->
@@ -94,9 +95,21 @@
             </exclusions>
             <scope>compile</scope>
         </dependency>
+        <!-- HikariCP (SQLite/MySQL) -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.6</version>
+        </dependency>
+        <!-- slf4j (required by Hikari) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>SkinsRestorer</finalName>
+        <finalName>${project.name}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -133,6 +146,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
         </plugins>
         <resources>
             <resource>
