--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -1,4 +1,4 @@
 name: ${project.name}
 main: skinsrestorer.bungee.SkinsRestorer
 version: ${project.version}
-author: Th3Tr0LLeR
+author: Th3Tr0LLeR, DoNotSpamPls, Blackfire62
