--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,7 @@
-# Compiled class file
-*.class
+# Compiled plugin files
 target/
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# IDE weirdness
+# IDE files
 .idea/
 *.iml
 .classpath
