--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
             <version>1.2</version>
             <scope>compile</scope>
         </dependency>
+        <!-- bStats Lite for Sponge -->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-sponge-lite</artifactId>
+            <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- Spiget Updater for Bukkit -->
         <dependency>
             <groupId>org.inventivetalent.spiget-update</groupId>
@@ -157,7 +164,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -172,7 +178,6 @@
                     </execution>
                 </executions>
             </plugin>
-            -->
         </plugins>
         <resources>
             <resource>
