before they start asking
because i know they will DM me

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -1,1 +1,4 @@
 # SkinsRestorer Sponge config
+#we know.. it's empty alright :( But you can fill my hart! head over to our dev branch!
+# https://github.com/DoNotSpamPls/SkinsRestorerX/
+# or https://github.com/Th3Tr0LLeR/SkinsRestorer---Maro/
