--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}
 description: ${project.description}
 website: https://skinsrestorer.net/
 authors: [Th3Tr0LLeR, DoNotSpamPls, Blackfire62, McLive]
+api-version: 1.13
 commands:
   skinsrestorer:
     aliases: [sr]
