Add custom bstats charts

--- a/pom.xml
+++ b/pom.xml
@@ -87,21 +87,21 @@
         <!-- bStats Lite for Bukkit -->
         <dependency>
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit-lite</artifactId>
+            <artifactId>bstats-bukkit</artifactId>
             <version>1.4</version>
             <scope>compile</scope>
         </dependency>
         <!-- bStats Lite for BungeeCord -->
         <dependency>
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bungeecord-lite</artifactId>
+            <artifactId>bstats-bungeecord</artifactId>
             <version>1.4</version>
             <scope>compile</scope>
         </dependency>
         <!-- bStats Lite for Sponge -->
         <dependency>
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-sponge-lite</artifactId>
+            <artifactId>bstats-sponge</artifactId>
             <version>1.4</version>
             <scope>compile</scope>
         </dependency>
