--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,19 +11,17 @@ SkinExpiresAfter: 1584
 # Timeout for skin changing (set to 0 to disable)
 SkinChangeCooldown: 30
 
-DisableOnJoinSkins: false
-
 # Set the language you will use - Files are located in /SkinsRestorer/languages directory
 # You can add custom locale file by copying the english.yml, renaming the new file into your language and editing it
 # Default: english - english.yml
 Locale: english
 
-#The new Permissions System information can be foud on our wiki here: 
+# The new Permissions System information can be foud on our wiki here:
 # https://github.com/SkinsRestorer/SkinsRestorerX/wiki/cmds-&-perms
 Permissions:
   NewPermissions: true
   
-#allows the usage of per skin perm. example: skinsrestorer.skin.notch OR skinsrestorer.skin.xknat
+# Allows the usage of per skin perm. example: skinsrestorer.skin.notch OR skinsrestorer.skin.xknat
 # !~ requires  NewPermissions: true 
 PerSkinPermissions: false
 
@@ -65,3 +63,7 @@ Updater:
 
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin
 NoSkinIfLoginCanceled: true
+
+# <!! Warning !!>
+# Enabling this will stop SkinsRestorer to change skins on join.
+DisableOnJoinSkins: false
