--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,14 +1,19 @@
 ##############################
 #  SkinsRestorer Config.yml  #
+#  Generated on 13.6         #
 ##############################
+#
+# We from SRTeam thank you for using our plugin!
+# If you are confused or need help chek out the wiki: https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
+# not working or get error?? -> Discord: https://discord.me/SkinsRestorer/
 
-# If set to true, /skin can be used without a permission.
+# If true, players can change skins without permission.
 SkinWithoutPerm: true
 
 # How long are the skins stored in database (in minutes)
 SkinExpiresAfter: 1584
 
-# Timeout for skin changing (set to 0 to disable)
+# Timeout for changing skins (set to 0 to disable)
 SkinChangeCooldown: 30
 
 # Set the language you will use - Files are located in /SkinsRestorer/languages directory
@@ -42,11 +47,13 @@ DisabledSkins:
 
 # Multi-Bungee support
 # Enable this if you have issues with skins in multi-proxy environments
+# If your using bungee and you have the plugin in all spigot servers and it still does not work, turn this on.
 # (This is automatically enabled if you have RedisBungee)
 MultiBungee:
   Enabled: false
 
 # Settings for MySQL skin storage (recommended for big BungeeCord networks)
+# !~ IF YOU USE BUNGEE, DO NOT mysql Spigot ~!
 MySQL:
   Enabled: false
   Host: localhost
@@ -64,6 +71,11 @@ Updater:
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin
 NoSkinIfLoginCanceled: true
 
-# <!! Warning !!>
-# Enabling this will stop SkinsRestorer to change skins on join.
-DisableOnJoinSkins: false
+#end 
+
+# Usefull Links #
+# Website: https://skinsrestorer.net/
+# Wiki https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
+# spigot: https://www.spigotmc.org/resources/skinsrestorer.2124/
+# github: https://github.com/SkinsRestorer/SkinsRestorerX/
+# discord: https://discord.me/SkinsRestorer/
