--- a/src/main/resources/command-messages.properties
+++ b/src/main/resources/command-messages.properties
@@ -1,3 +1,12 @@
+##############################
+#  SkinsRestorer help msg    #
+#  Generated on 13.6         #
+##############################
+#
+# We from SRTeam thank you for using our plugin!
+#
+# For more information about messages        -> https://github.com/SkinsRestorer/SkinsRestorerX/wiki/Locale-and-Translations/
+# For Advanced help or other go to our Discord: https://discord.me/SkinsRestorer/
 acf-core.permission_denied = &3[&2&lSkinsRestorer&r&3] I'm sorry, but you do not have permission to perform this command.
 acf-core.error_generic_logged = &e[&2SkinsRestorer&e] &4An error occurred. This problem has been logged. Sorry for the inconvenience.
 acf-core.unknown_command = Unknown Command, please type <c2>/help</c2>
@@ -12,7 +21,7 @@ acf-core.no_command_matched_search = &e[&2SkinsRestorer&e] &4Error&8: &cnot such
 acf-core.help_page_information = - Showing page <c2>{page}</c2> of <c2>{totalpages}</c2> (<c3>{results}</c3> results).
 acf-core.help_no_results = &e[&2SkinsRestorer&e] &4Error&8: &cNo more results&4.
 acf-core.help_header = &3[&2&lSkinsRestorer&r&3] &7- &bShowing help for &a{commandprefix}{command}&7.
-acf-core.help_format = &2{command} &a{parameters} &7{separator}&7 &f{description}
+acf-core.help_format = &2  &2{command} &a{parameters} &7{separator}&7 &f{description}
 acf-core.help_detailed_header = &3[&2&lSkinsRestorer&r&3] &7- <c1>Showing info for </c1><c2>{commandprefix}{command}</c2>
 acf-core.help_detailed_command_format = <c1>{command}</c1> <c2>{parameters}</c2> <c3>{separator} {description}</c3>
 acf-core.help_detailed_parameter_format = <c2>{name}</c2>: <c3>{description}</c3>
