--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -74,6 +74,7 @@ DisableOnJoinSkins: false
 # Enable or disable the updater.
 Updater:
   Enabled: true
+  PeriodicChecks: true
 
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin
 NoSkinIfLoginCanceled: true
