Re-add old things because old things are cool ¯\_(ツ)_/¯

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -85,7 +85,11 @@ Updater:
 # Stop the process of setting a skin if the LoginEvent was canceled by an AntiBot plugin
 NoSkinIfLoginCanceled: true
 
-#end 
+# Use old skin help
+UseOldSkinHelp: false
+
+
+# end
 
 # Usefull Links #
 # Website: https://skinsrestorer.net/
