--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
             <artifactId>acf-bungee</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
-        <!-- ACF for sponge -->
+        <!-- ACF for skinsrestorer.sponge -->
         <dependency>
             <groupId>co.aikar</groupId>
             <artifactId>acf-sponge</artifactId>
@@ -176,6 +176,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
+        </dependency>
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
@@ -231,6 +238,20 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>templating-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>filter-sources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
         <resources>
             <resource>
