Replace Spiget updater with GitHub updater

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,7 +16,7 @@
 SkinWithoutPerm: true
 
 # Time skins are stored in database before we request again (in minutes)
-SkinExpiresAfter: 360
+SkinExpiresAfter: 180
 
 # Players cooldown when changing skins (set to 0 to disable)
 # Can be bypassed with 'skinsrestorer.bypasscooldown'
@@ -89,18 +89,20 @@ NoSkinIfLoginCanceled: true
 UseOldSkinHelp: false
 
 
-# end
+# End #
 
-#Usefull tools:
-#Vectier Thailand has made some super cool "Custom Skin" tools that you can use!
-#SkinFile Generator:
-#With SkinFile Generator you can upload your own custom skin to get a unique .skin file that you can put in your skins folder to use with skinsrestorer. 
-#check it out here: https://riflowth.github.io/SkinFile-Generator/
-#SkinSystem :
-#With SkinSystem you as a server owner can connect authme (and forum) with the SkinSystem website that you can host to give your players the ability to upload custom skins.
-#Check it out here: https://github.com/riflowth/SkinSystem
-
-# Usefull Links #
+# Useful tools:
+# Vectier Thailand has made some super cool "Custom Skin" tools that you can use!
+#
+# SkinFile Generator:
+# With SkinFile Generator you can upload your own custom skin to get a unique .skin file that you can put in your skins folder to use with SkinsRestorer.
+# Check it out here: https://riflowth.github.io/SkinFile-Generator/
+#
+# SkinSystem :
+# With SkinSystem you as a server owner can connect AuthMe (and forum) with the SkinSystem website that you can host to give your players the ability to upload custom skins.
+# Check it out here: https://github.com/riflowth/SkinSystem
+#
+# Useful Links #
 # Website: https://skinsrestorer.net/
 # Wiki https://github.com/SkinsRestorer/SkinsRestorerX/wiki/
 # spigot: https://www.spigotmc.org/resources/skinsrestorer.2124/
