--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,6 @@
             <id>velocity-repo</id>
             <url>https://repo.velocitypowered.com/snapshots/</url>
         </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
     </repositories>
     <dependencies>
         <!-- Spigot API -->
@@ -170,11 +166,11 @@
             <artifactId>acf-sponge</artifactId>
             <version>0.5.0-SNAPSHOT</version>
         </dependency>
-        <!-- temporary fix for https://github.com/aikar/commands/pull/216 -->
+        <!-- ACF for velocity -->
         <dependency>
-            <groupId>com.github.egg82</groupId>
-            <artifactId>commands</artifactId>
-            <version>fix~velocity-SNAPSHOT</version>
+            <groupId>co.aikar</groupId>
+            <artifactId>acf-velocity</artifactId>
+            <version>0.5.0-SNAPSHOT</version>
         </dependency>
         <!-- gson -->
         <dependency>
